--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^5.13.0",
     "@types/multer": "^1.4.11",
+    "archiver": "^7.0.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
